INFRA/manifests/rendered/02-render-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: vllm-render
    llm-d.ai/guide: precise-prefix-cache-routing
  name: precise-prefix-cache-routing-render
spec:
  ports:
  - name: render-http
    port: 8000
    protocol: TCP
    targetPort: modelserver
  selector:
    llm-d.ai/guide: precise-prefix-cache-routing
    llm-d.ai/role: decode
